updated readme, deleted phase 7 gap doc